--- a/LendingClubCaseStudy.ipynb
+++ b/LendingClubCaseStudy.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing important libs\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
