--- a/Group_Facilitator_PrashantKumarMisra.ipynb
+++ b/Group_Facilitator_PrashantKumarMisra.ipynb
@@ -8589,6 +8589,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fbb60632-f18f-4744-899b-7470e7f0ca78",
+   "metadata": {},
+   "source": [
+    "#### Inference:\n",
+    "#### We observe that defaulters are more ratio wise in case of 'Verified'and 'Source Verified' compared to 'Not Verified'. So we can conclude income verification or income source verification does not gurantee us if the loan will be repaid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "95f0404f-2b53-49d2-9020-eaf23b439ee3",
    "metadata": {},
    "source": [
