--- a/PrashantKumarMisra.ipynb
+++ b/PrashantKumarMisra.ipynb
@@ -8597,6 +8597,415 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "ed756dbe-d674-420f-aa04-b231b642e7ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>loan_status</th>\n",
+       "      <th>addr_state</th>\n",
+       "      <th>Charged Off</th>\n",
+       "      <th>Fully Paid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>351.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AR</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>195.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AZ</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>668.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>1012.0</td>\n",
+       "      <td>5510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CO</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>625.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CT</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>586.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>185.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DE</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>FL</td>\n",
+       "      <td>458.0</td>\n",
+       "      <td>2145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GA</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>1072.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>HI</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>127.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>IA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ID</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>IL</td>\n",
+       "      <td>182.0</td>\n",
+       "      <td>1204.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>KS</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>212.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>KY</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>254.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>LA</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>351.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>MA</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>1086.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>MD</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>819.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>ME</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>MI</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>549.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>MN</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>488.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>MO</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>526.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>MS</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>MT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>NC</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>582.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>NH</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>127.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>NJ</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>1425.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>NM</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>NV</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>351.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>453.0</td>\n",
+       "      <td>3024.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>965.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>235.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>OR</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>348.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>PA</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>1238.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>RI</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>166.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>SC</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>372.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>SD</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>TN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>2203.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>UT</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>VA</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>1133.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>VT</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>WA</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>652.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>WI</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>353.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>WV</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>136.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>WY</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "loan_status addr_state  Charged Off  Fully Paid\n",
+       "0                   AK         14.0        58.0\n",
+       "1                   AL         45.0       351.0\n",
+       "2                   AR         25.0       195.0\n",
+       "3                   AZ        112.0       668.0\n",
+       "4                   CA       1012.0      5510.0\n",
+       "5                   CO         82.0       625.0\n",
+       "6                   CT         83.0       586.0\n",
+       "7                   DC         13.0       185.0\n",
+       "8                   DE         12.0        96.0\n",
+       "9                   FL        458.0      2145.0\n",
+       "10                  GA        197.0      1072.0\n",
+       "11                  HI         28.0       127.0\n",
+       "12                  IA          NaN         5.0\n",
+       "13                  ID          1.0         5.0\n",
+       "14                  IL        182.0      1204.0\n",
+       "15                  IN          NaN         9.0\n",
+       "16                  KS         24.0       212.0\n",
+       "17                  KY         42.0       254.0\n",
+       "18                  LA         49.0       351.0\n",
+       "19                  MA        145.0      1086.0\n",
+       "20                  MD        147.0       819.0\n",
+       "21                  ME          NaN         3.0\n",
+       "22                  MI         92.0       549.0\n",
+       "23                  MN         76.0       488.0\n",
+       "24                  MO        103.0       526.0\n",
+       "25                  MS          2.0        17.0\n",
+       "26                  MT          8.0        65.0\n",
+       "27                  NC        104.0       582.0\n",
+       "28                  NE          3.0         2.0\n",
+       "29                  NH         20.0       127.0\n",
+       "30                  NJ        261.0      1425.0\n",
+       "31                  NM         28.0       146.0\n",
+       "32                  NV         96.0       351.0\n",
+       "33                  NY        453.0      3024.0\n",
+       "34                  OH        134.0       965.0\n",
+       "35                  OK         38.0       235.0\n",
+       "36                  OR         65.0       348.0\n",
+       "37                  PA        157.0      1238.0\n",
+       "38                  RI         25.0       166.0\n",
+       "39                  SC         62.0       372.0\n",
+       "40                  SD         11.0        49.0\n",
+       "41                  TN          2.0        14.0\n",
+       "42                  TX        282.0      2203.0\n",
+       "43                  UT         33.0       199.0\n",
+       "44                  VA        161.0      1133.0\n",
+       "45                  VT          6.0        46.0\n",
+       "46                  WA        113.0       652.0\n",
+       "47                  WI         55.0       353.0\n",
+       "48                  WV         20.0       136.0\n",
+       "49                  WY          2.0        72.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pivot_table_count = lending_df_filter.pivot_table(index='addr_state', columns='loan_status', values='loan_amnt', aggfunc='count').reset_index()\n",
+    "from IPython.display import display\n",
+    "display(pivot_table_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dd97660-7731-4904-99aa-b3b021758312",
+   "metadata": {},
+   "source": [
+    "#### CA and FL has high loan defaulters"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "95f0404f-2b53-49d2-9020-eaf23b439ee3",
    "metadata": {},
@@ -8606,11 +9015,12 @@
     "#### 1. Term --> duration of the loan ( lesser the duration lower the chances of defaulters)\n",
     "#### 2. Interest rate (lesser the interest rate higher the chances of loan repayment)\n",
     "#### 3. Purpose for which the loan is availed- debt_consolidation,credit_card, home_improvement and small_business are major categories where loss is more.\n",
-    "#### 4. Geographical location like state\n",
+    "#### 4. addr_state: Few states like CA (California) and FL (Florida) has high loan defaulters\n",
     "#### 5. Years of employment\n",
     "#### 6. annual_inc --> annual income (higher the income higher the chances of repayment)\n",
     "#### 7. Grades: Loan grade A, B have higher chances of repayment and C,D,E,F,G grades have maximum defaulters.\n",
-    "#### 8. verification_status: We observe that defaulters are more ratio wise in case of 'Verified'and 'Source Verified' compared to 'Not Verified'. So we can conclude income verification or income source verification does not gurantee us if the loan will be repaid"
+    "#### 8. verification_status: We observe that defaulters are more ratio wise in case of 'Verified'and 'Source Verified' compared to 'Not Verified'. So we can conclude income verification or income source verification does not gurantee us if the loan will be repaid\n",
+    "#### 9. loan_amnt: Higher the loan higher the chances of loan default."
    ]
   },
   {
